src/index.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 3px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #232323;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

#root {
  width: 100%;
}

.grid {
  height: 100%;
  min-height: 50px;
  max-height: 800px;
  display: flex;
  justify-content: center;
  flex-grow: 1;
}

g.hexagon > text {
  rotate: -90deg;
}

g.hexagon-group.selected {
  filter: drop-shadow(0px 0px 0.35px hsla(0, 0%, 100%, 0.9));
}

g.hexagon-group.available {
  cursor: pointer;
}

